src/test/resources/30/single/xhtml/valid/entities.xhtml
<!DOCTYPE html>	 
<html xmlns="http://www.w3.org/1999/xhtml">
    <head>
        <title>Test</title>
    </head>
    <body>
        <!-- this is a valid entity reference -->
        &amp; 
        <!-- this is a valid character reference -->
        &#38;
        <!-- this is not an entity reference, as it’s in a comment -->
        <!-- &foo; -->
        <!-- this is not an entity reference, as it’s in a CDATA section -->
        <![CDATA[&foo;]]>
    </body>
</html>
