src/test/resources/30/single/xhtml/invalid/obsolete-seamless-iframe.xhtml
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
  <head lang="en">
    <meta charset="UTF-8"/>
    <title>Document</title>
  </head>
  <body>
    <iframe seamless="seamless" srcdoc="&lt;p>disallowed&lt;/p>"
      ></iframe>
  </body>
</html>